Use List.removeLast().